--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -3,45 +3,59 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@color/white"
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context=".Login">
+
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="404dp"
+        android:layout_height="631dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <LinearLayout
-            android:layout_width="290dp"
-            android:layout_height="509dp"
+            android:layout_width="329dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:orientation="vertical">
 
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="wrap_content"
+                android:layout_width="171dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginBottom="20dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="20dp"
                 android:fontFamily="serif"
-                android:text="Welcome\nBack"
+                android:text="Sign Up"
                 android:textColor="#0E0D0D"
-                android:textSize="35sp"
+                android:textSize="40dp"
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/email2"
-                android:layout_width="274dp"
+                android:id="@+id/name2"
+                android:layout_width="306dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/edittext_background"
+                android:drawableStart="@drawable/name"
+                android:hint=" Name"
+                android:padding="15dp"
+                android:textColorHint="#6E6C6C" />
+
+            <EditText
+                android:id="@+id/email2"
+                android:layout_width="308dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/edittext_background"
                 android:drawableStart="@drawable/email"
@@ -51,9 +65,9 @@
 
             <EditText
                 android:id="@+id/password2"
-                android:layout_width="272dp"
+                android:layout_width="308dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/edittext_background"
                 android:drawableStart="@drawable/password"
@@ -61,27 +75,28 @@
                 android:padding="15dp"
                 android:textColorHint="#6E6C6C" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="272dp"
+
+            <EditText
+                android:id="@+id/password3"
+                android:layout_width="308dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:gravity="end"
-                android:text="Forget password?"
-                android:textColor="@color/black"
-                android:textSize="14dp"
-                android:textStyle="bold" />
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edittext_background"
+                android:drawableStart="@drawable/password"
+                android:hint=" Confirm password"
+                android:padding="15dp"
+                android:textColorHint="#6E6C6C" />
 
 
             <Button
-                android:id="@+id/logIn"
-                android:layout_width="267dp"
-                android:layout_height="57dp"
+                android:id="@+id/signupbtn"
+                android:layout_width="275dp"
+                android:layout_height="59dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="#9A8841"
-                android:text="login"
+                android:text="Sign up"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
@@ -90,18 +105,18 @@
                 app:layout_constraintVertical_bias="0.603" />
 
             <TextView
-                android:id="@+id/textviewl"
-                android:layout_width="match_parent"
+                android:id="@+id/textviewr"
+                android:layout_width="224dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 android:gravity="center"
-                android:text="Are you new user? Register"
-                android:textColor="@color/black"
+                android:text="Already have an account? Login"
+                android:textColor="#1E1C1C"
                 android:textStyle="bold" />
-
         </LinearLayout>
 
 
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
