--- a/app/src/main/res/layout/viewholder_pop_list.xml
+++ b/app/src/main/res/layout/viewholder_pop_list.xml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="175dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="165dp"
     android:background="@drawable/grey_background"
     android:elevation="3dp"
     android:layout_margin="8dp"
     android:layout_height="240dp">
 
+
+
     <ImageView
         android:id="@+id/pic"
-        android:layout_width="175dp"
-        android:layout_height="155dp"
+        android:layout_width="142dp"
+        android:layout_height="139dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pic1" />
+
+    <ToggleButton
+        android:id="@+id/wishlistButton"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_margin="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
+        android:background="@drawable/wishlist_selector"
+        android:textOff=""
+        android:textOn=""
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
@@ -24,6 +42,8 @@
         android:background="@drawable/white_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+
 
         <ImageView
             android:id="@+id/imageView16"
@@ -80,24 +100,4 @@
         app:layout_constraintStart_toStartOf="@+id/titleTxt"
         app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
 
-    <TextView
-        android:id="@+id/reviewTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:text="12"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
-        app:layout_constraintEnd_toStartOf="@+id/imageView17"
-        app:layout_constraintTop_toTopOf="@+id/imageView17" />
-
-    <ImageView
-        android:id="@+id/imageView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/feeTxt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/feeTxt"
-        app:srcCompat="@drawable/review" />
 </androidx.constraintlayout.widget.ConstraintLayout>
