--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Activity.MainActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -62,7 +62,7 @@
                 android:textColorHint="#6E6C6C" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/forgotpassword"
                 android:layout_width="272dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
