--- a/app/src/main/res/layout/activity_view_all.xml
+++ b/app/src/main/res/layout/activity_view_all.xml
@@ -101,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:text="Wallets"
+                android:text="All Products"
                 android:textColor="@color/black"
                 android:textSize="19sp"
                 android:textStyle="bold" />
@@ -122,7 +122,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/view1"
                 android:layout_width="match_parent"
-                android:layout_height="383dp"
+                android:layout_height="465dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:clipToPadding="false"
@@ -135,8 +135,8 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_width="420dp"
+        android:layout_height="62dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
